--- a/views/index.ejs
+++ b/views/index.ejs
@@ -500,7 +500,7 @@
                 alt="John Doe"
                 class="rounded-circle testimonial-avatar"
               />
-              <h5 class="fw-bold">Karolína Hebková</h5>
+              <h5 class="fw-bold">Ester Vrajová</h5>
               <p class="testimonial-quote">
                 Edookio je skvělá kombinace dvou zásadních studijních pomůcek -
                 testových otázek a opakovacích kartiček. Díky mobilní aplikaci
@@ -522,7 +522,7 @@
                 alt="Maria Kate"
                 class="rounded-circle testimonial-avatar"
               />
-              <h5 class="fw-bold">Petra Hroudná</h5>
+              <h5 class="fw-bold">Pavla Šelongová</h5>
               <p class="testimonial-quote">
                 “Tato aplikace je přesně to, co jsem hledala! Opakovací kartičky
                 a testy vytvořené pomocí AI jsou kvalitní a v nevyžadují v
