--- a/views/cards/show30.ejs
+++ b/views/cards/show30.ejs
@@ -250,7 +250,7 @@
                     </div>
                   </div>
                   <div class="text-center mt-4">
-                    <p>Kartičku můžeš označit tlačítkem <b class="color-1">umím</b>. Při dalším procházení balíčku ti ji pak nebudeme ukazovat.</p>
+                    <p>Kartičku můžeš označit tlačítkem <b class="color-1">umím</b>. Algoritmus rozloženého opakování (spaced repetition) ti naučené kartičky bude znovu zobrazovat v prodlužujících se intervalech.</p>
                     <p>Balíček můžeš kdykoliv <b class="color-1">resetovat</b> a vrátit se <b class="color-1"> <br />ke všem</b> kartičkám.</p>
                     <% if (!currentUser) { %>
                       <p class="mt-3 text-smaller text-muted mx-4">Funkce je plnohodnotně dostupná po bezplatné registraci přihlášeným uživatelům.</p>
