--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -35,6 +35,9 @@
             </li>
             <li><a class="dropdown-item" href="/admin/admin">Admin</a></li>
             <li><a class="dropdown-item" href="/admin/jobs">Jobs</a></li>
+            <li>
+              <a class="dropdown-item" href="/admin/cardinfos">CardInfos</a>
+            </li>
             <li><a class="dropdown-item" href="/admin/stats">Statistiky</a></li>
             <li><a class="dropdown-item" href="/admin/users">Uživatelé</a></li>
             <li>
