--- a/views/admin/cardInfos.ejs
+++ b/views/admin/cardInfos.ejs
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="col-12 mb-3">
-      <h5>Posledních 100 upravených CardInfo záznamů</h5>
+      <h5>1000 upravených CardInfo záznamů (řazeno dle nextReview date)</h5>
     </div>
   </div>
   <div class="row">
