--- a/views/cards/show30.ejs
+++ b/views/cards/show30.ejs
@@ -166,7 +166,7 @@
               </div>
             </div>
             <div class="">
-              <a href="#" class="btn btn-lg btn-outline-danger disabled" id='btn-otocit'>otočit</a>
+              <a href="#" class="btn btn-lg btn-outline-danger knowledge-btn disabled" id='btn-otocit'>otočit</a>
             </div>
             <div class="disabled" style="min-width: 5rem; opacity: 0">X</div>
           </div>
@@ -186,8 +186,8 @@
               </div>
             </div>
             <div>
-              <a href="#" class="btn btn-lg btn-outline-danger easy-btn" id="btn-know" style="min-width: 5rem;">umím</a>
-              <a href="#" class="btn btn-lg btn-outline-danger easy-btn" id="btn-dont-know" style="min-width: 5rem;">další</a>
+              <a href="#" class="btn btn-lg btn-outline-danger knowledge-btn" id="btn-dont-know" style="min-width: 7rem;">neumím</a>
+              <a href="#" class="btn btn-lg btn-outline-danger knowledge-btn" id="btn-know" style="min-width: 7rem;">umím</a>
             </div>
             <div id="rotate-div" style="min-width: 5rem">
               <a href="#" id="rotate-back" class="rotate-icon"><i class="fas fa-sync-alt"></i></a>
