--- a/views/home.ejs
+++ b/views/home.ejs
@@ -258,8 +258,9 @@
                           </p>
                           <a
                             href="/category/<%= cat._id %>"
-                            class="btn btn-sm btn-danger"
-                            ><%= texts.landingPage.study %></a
+                            class="btn btn-sm <%= cat.proficiency === 100 ? 'btn-success' : 'btn-danger' %>"
+                            style="min-width: 6rem;"
+                            ><%= cat.proficiency %> %</a
                           >
                         </div>
                       </div>
@@ -324,8 +325,9 @@
                             </p>
                             <a
                               href="/category/<%= cat._id %>"
-                              class="btn btn-sm btn-danger"
-                              ><%= texts.landingPage.study %></a
+                              class="btn btn-sm <%= cat.proficiency === 100 ? 'btn-success' : 'btn-danger' %>"
+                              style="min-width: 6rem;"
+                              ><%= cat.proficiency %> %</a
                             >
                           </div>
                         </div>
