--- a/views/category.ejs
+++ b/views/category.ejs
@@ -959,6 +959,20 @@ currentUser.admin))) { %> <% category.sections.forEach(section => { %>
               ><i class="far fa-plus-square"></i> Přidat otázku</a
             >
           </div>
+          <div class="d-flex justify-content-between align-items-center p-0">
+            <a
+              href="/category/<%= category._id %>/pushSectionUp/<%= section._id %>"
+              class="btn btn-sm btn-outline-danger my-1 w-100"
+              style="margin-right: 4px"
+              ><i class="fas fa-arrow-up"></i> Posunout nahoru</a
+            >
+            <a
+              href="/category/<%= category._id %>/pushSectionDown/<%= section._id %>"
+              class="btn btn-sm btn-outline-danger my-1 w-100"
+              style="margin-left: 4px"
+              ><i class="fas fa-arrow-down"></i> Posunout dolů</a
+            >
+          </div>
         </div>
         <div class="row mb-2 mt-3 mx-3 d-flex">
           <a
@@ -1069,12 +1083,11 @@ category.sections.forEach(section => { %>
       </div>
       <div class="modal-body">
         <h5 class="text-center">Umíš všechny kartičky v tomto balíčku</h5>
-        <h6 class="text-center my-3">Chceš začít od začátku?</h6>
-        <div class="d-flex justify-content-center align-items-center mt-4">
+        <div class="d-flex justify-content-center align-items-center mt-4 mb-3">
           <a
-            href="/category/<%= category._id %>/section/<%= section._id %>/resetCards"
+            href="/category/<%= category._id %>/section/<%= section._id %>/card30/1?mode=unknown"
             class="btn btn-danger"
-            >Ano, začít od začátku</a
+            >zobrazit kartičky</a
           >
         </div>
       </div>
