--- a/views/home.ejs
+++ b/views/home.ejs
@@ -257,11 +257,11 @@
                             >
                           </p>
                           <a
-                            href="/category/<%= cat._id %>"
-                            class="btn btn-sm <%= cat.proficiency === 100 ? 'btn-success' : 'btn-danger' %>"
-                            style="min-width: 6rem;"
-                            ><%= cat.proficiency %> %</a
-                          >
+                              href="/category/<%= cat._id %>"
+                              class="btn btn-sm btn-danger"
+                              style="min-width: 6rem;"
+                              >Spustit</a
+                            >
                         </div>
                       </div>
                     </div>
@@ -325,9 +325,9 @@
                             </p>
                             <a
                               href="/category/<%= cat._id %>"
-                              class="btn btn-sm <%= cat.proficiency === 100 ? 'btn-success' : 'btn-danger' %>"
+                              class="btn btn-sm btn-danger"
                               style="min-width: 6rem;"
-                              ><%= cat.proficiency %> %</a
+                              >Spustit</a
                             >
                           </div>
                         </div>
