--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -83,14 +83,11 @@
         <li class="nav-item">
           <a class="nav-link" href="/category/dashboard">Předměty</a>
         </li>
-        <!--
+        <% if (currentUser && currentUser.admin) { %>
         <li class="nav-item">
-          <a class="nav-link" href="/leaderboard"
-            >Žebříček
-            </a
-          >
-        </li>-->
-        <% } %> <% if (!currentUser) { %>
+          <a class="nav-link" href="/leaderboard">Žebříček </a>
+        </li>
+        <% } %> <% } %> <% if (!currentUser) { %>
         <li class="nav-item">
           <a class="nav-link" href="/auth/user/login">Přihlásit se</a>
         </li>
