--- a/views/invoices/showOne.ejs
+++ b/views/invoices/showOne.ejs
@@ -92,9 +92,9 @@
               <span><%= invoice.amount %> Kč</span>
             </div>
             <div class="footer text-small text-muted">
-              Chilero s.r.o., IČ: 089 00 230 se sídlem Kaštanová 3, 779 00
-              Olomouc, zapsaná v obchodním rejstříku vedeném Krajským soudem v
-              Ostravě, sp. zn. C 81220
+              Chilero s.r.o., IČ: 089 00 230 se sídlem Příčná 1892/4, Nové
+              Město, 110 00 Praha 1, zapsaná v obchodním rejstříku vedeném
+              Krajským soudem v Ostravě, sp. zn. C 81220
             </div>
           </div>
         </div>
