--- a/views/legal/contact.ejs
+++ b/views/legal/contact.ejs
@@ -39,8 +39,8 @@
               </div>
               <div class="col-8">
                 <p>
-                  Kaštanová 493/3,<br />
-                  Olomouc 779 00
+                  Příčná 1892/4,<br />
+                  Nové Město, 110 00 Praha 1
                 </p>
               </div>
               <hr />
