--- a/views/legal/vop.ejs
+++ b/views/legal/vop.ejs
@@ -20,9 +20,9 @@
       <div class="col-11">
         <p>
           Tyto všeobecné obchodní podmínky (dále jen „obchodní podmínky“) vydává
-          obchodní společnost Chilero s. r. o., IČO: 08900230, se sídlem
-          Kaštanová 3, Olomouc 779 00, zapsaná u Krajského soudu v Ostravě,
-          oddíl C, vložka 81220 (dále jen „poskytovatel“) v souladu s
+          obchodní společnost Chilero s. r. o., IČO: 08900230, se sídlem Příčná
+          1892/4, Nové Město, 110 00 Praha 1, zapsaná u Krajského soudu v
+          Ostravě, oddíl C, vložka 81220 (dále jen „poskytovatel“) v souladu s
           ustanovením § 1751 odst. 1 zákona č. 89/2012 Sb., občanský zákoník
           (dále jen „občanský zákoník“).
         </p>
